# ProjectsForFun

./: .gitignore  README.md  settings.json
CodeHeaderCreader/: BulletProof.cpp  BulletProof.h  CMakeLists.txt  ClassHeader.cpp  ClassHeader.h  HEAD_FORMAT.cpp  HEAD_FORMAT.h  bullet.cpp  bullet.h  headers.h  main.cpp  main.h  optionMenus.cpp  optionMenus.h  sourceMenu.cpp  sourceMenu.h  timeMade.cpp  timeMade.h
CodeHeaderCreader/Python/: OSCheck.py
MacthingProgram/: CMakeLists.txt  commonheader.h  fileIO.cpp  fileIO.h  main.cpp  tmp.cpp
WebCrawling/: run.bat
WebCrawling/ForHoshizaki/: main.py  out.csv  tmp.csv
WebCrawling/Google/: main.py  tmp.csv
WebCrawling/follettice/: main.py  tmp.csv
WebCrawling/source/: Connect.py  DataCapturing.py  DataStore.py  IceSpetialCase.py  Main.py  TrigalClick.py  WebDataClass.py  WebScraping.py
WebCrawling/tmp/: ClickWeb.py  Connect.py  DataClass.py  DataProcess.py  Main.py  SettingData.py  WebData.py  WebPassing.py
webCraring/: UbuntuToExecutable.sh  guiGet.py  guiSetting.py  main.py  run.bat
webCraring/source/: connect.py  dataClass.py  dataPreOut.py  dataSetting.py  guiGet.py  guiSetting.py  main.py  proseccForPassing.py  web_crawling_V0.1.exe.spec
